--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <app-default-login-page
-title="login into your account"
-primaryButtonText="Login Now"
-SecundaryButtonText="Sign Up Now"
+title="Instalação de Software"
+primaryButtonText="Entrar como professor"
+SecundaryButtonText="Entrar como administrador"
 (submit)="submit()"
 (navigate)="navigate()"
 [disablePrimaryBtn]="!loginForm.valid">
