--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,29 +1,31 @@
 <app-default-login-page
-title="Instalação de Software"
-primaryButtonText="Entrar como professor"
-SecundaryButtonText="Entrar como administrador"
-(submit)="submit()"
-(navigate)="navigate()"
-[disablePrimaryBtn]="!loginForm.valid">
-<form [formGroup]="loginForm">
-   <app-primary-input
-       formControlName="email"
-       inputName="email"
-       type="email"
-       label="Email"
-       placeholder="johndoe@gmail.com"
-   >
-       <img src="/assets/svg/email-icon.svg"/>
-   </app-primary-input>
-   <app-primary-input
-       formControlName="password"
-       inputName="password"
-       type="password"
-       label="Your Password"
-   >
-   <img src="/assets/svg/password-icon.svg"/>
-</app-primary-input>
-<span>Forgot password?</span>
-</form>
+  title="Instalação de Software"
+  primaryBtnText="Entrar como professor"
+  SecundaryBtnText="Entrar como administrador"
+  [disablePrimaryBtn]="!loginForm.valid"
+  (submit)="submit('professor', $event)"
+  (secondarySubmit)="submit('admin', $event)"
+>
+  <form [formGroup]="loginForm">
+    <app-primary-input
+      formControlName="email"
+      inputName="email"
+      type="email"
+      label="Email"
+      placeholder="johndoe@gmail.com"
+    >
+      <img src="/assets/svg/email-icon.svg"/>
+    </app-primary-input>
 
+    <app-primary-input
+      formControlName="password"
+      inputName="password"
+      type="password"
+      label="Senha"
+    >
+      <img src="/assets/svg/password-icon.svg"/>
+    </app-primary-input>
+
+    <span>Esqueceu a senha?</span>
+  </form>
 </app-default-login-page>
