add : login autenticado e busca por api

--- a/src/app/pages/admin-login/admin-login.component.html
+++ b/src/app/pages/admin-login/admin-login.component.html
@@ -8,13 +8,13 @@
 >
     <form [formGroup]="loginForm">
         <app-primary-input
-            formControlName="email"
-            inputName="email"
-            type="email"
-            label="Email"
-            placeholder="admin@empresa.com"
+            formControlName="username"
+            inputName="username"
+            type="text"
+            label="Username"
+            placeholder="admin"
         >
-            <img src="/assets/svg/email-icon.svg"/>
+            <img src="/assets/svg/username-icon.svg"/>
         </app-primary-input>
         <app-primary-input
             formControlName="password"
