--- a/src/app/components/professor-dashboard/software-list/software-list.component.html
+++ b/src/app/components/professor-dashboard/software-list/software-list.component.html
@@ -1,9 +1,10 @@
+<!-- software-list.component.html -->
 <div class="software-list">
   <h2>Softwares Disponíveis</h2>
   <ul>
     <li *ngFor="let software of softwareList" @fadeIn>
-      <strong>{{ software.nome }}</strong> - v{{ software.versao }} ({{ software.tipo }})
-      <p>{{ software.descricao }}</p>
+      <strong>{{ software.nome }}</strong> - v{{ software.versao }} ({{ software.softwareLivre ? 'Livre' : 'Proprietário' }})
+     
 
       <button (click)="onSelect(software)">
         Selecionar
