--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<app-default-login-page
+<app-default-login-page 
   title="Instalação de Software"
   primaryBtnText="Entrar como professor"
   SecundaryBtnText="Entrar como administrador"
@@ -8,13 +8,13 @@
 >
   <form [formGroup]="loginForm">
     <app-primary-input
-      formControlName="email"
-      inputName="email"
-      type="email"
-      label="Email"
-      placeholder="johndoe@gmail.com"
+      formControlName="username"  
+      inputName="username"
+      type="text"
+      label="Username"
+      placeholder="johndoe"
     >
-      <img src="/assets/svg/email-icon.svg"/>
+      <img src="/assets/svg/username-icon.svg"/>
     </app-primary-input>
 
     <app-primary-input
