--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -3,7 +3,7 @@
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
   <!-- Card 1: Cadastrar Professor -->
   <a class="bg-white shadow rounded-2xl p-6 hover:shadow-lg transition cursor-pointer block" routerLink="/cadastrar">
-    <h2 class="text-xl font-semibold mb-2">Cadastrar Professor</h2>
+    <h2 class="text-xl font-semibold mb-2">Cadastros</h2>
     <p class="text-gray-600">Adicione novos professores ao sistema.</p>
   </a>
 
