--- a/src/app/components/admindashboard/cadastrar-novo-professor/cadastrar-novo-professor.component.html
+++ b/src/app/components/admindashboard/cadastrar-novo-professor/cadastrar-novo-professor.component.html
@@ -34,3 +34,77 @@
     Cadastrar
   </button>
 </form>
+
+
+<div class="container">
+  <h2>Cadastrar Novo Software</h2>
+
+  <form (ngSubmit)="onSubmit()" #softwareForm="ngForm">
+    <div class="form-group">
+      <label for="nome">Nome do Software:</label>
+      <input
+        type="text"
+        id="nome"
+        class="form-control"
+        required
+        [(ngModel)]="software.nome"
+        name="nome"
+        #nome="ngModel"
+      />
+      <div *ngIf="nome.invalid && nome.touched" class="text-danger">
+        O nome é obrigatório.
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="versao">Versão:</label>
+      <input
+        type="text"
+        id="versao"
+        class="form-control"
+        required
+        [(ngModel)]="software.versao"
+        name="versao"
+        #versao="ngModel"
+      />
+      <div *ngIf="versao.invalid && versao.touched" class="text-danger">
+        A versão é obrigatória.
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="link">Link de Download:</label>
+      <input
+        type="url"
+        id="link"
+        class="form-control"
+        required
+        [(ngModel)]="software.link"
+        name="link"
+        #link="ngModel"
+      />
+      <div *ngIf="link.invalid && link.touched" class="text-danger">
+        O link é obrigatório.
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="softwareLivre">Software Livre:</label>
+      <input
+        type="checkbox"
+        id="softwareLivre"
+        [(ngModel)]="software.softwareLivre"
+        name="softwareLivre"
+      />
+    </div>
+
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="softwareForm.invalid"
+    >
+      Cadastrar Software
+    </button>
+  </form>
+</div>
+
